# handshake

./: .gitignore
.github/workflows/: 001-build-and-push-auth.yaml  002-build-and-push-product.yaml  003-build-and-push-order.yaml  004-build-and-push-email.yaml  005-build-and-push-frontend.yaml
auth-service/: Cargo.toml  Dockerfile  README.md  Rocket.toml
auth-service/migrations/: 001_initial_setup.sql
auth-service/migrations/2026-01-24-000001_create_auth_tables/: down.sql  up.sql
auth-service/src/: auth.rs  db.rs  email.rs  health.rs  main.rs  models.rs  routes.rs  schema.rs
email-service/: Cargo.toml  Dockerfile  Rocket.toml
email-service/src/: health.rs  main.rs  routes.rs  smtp.rs
email-service/templates/: order_notification.html  verification.html
frontend/: Dockerfile  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/layouts/: MainLayout.astro
frontend/src/pages/: index.astro  live.ts  login.astro  orders.astro  products.astro  ready.ts  register.astro  sell.astro
frontend/src/styles/: global.css
frontend/src/utils/: api.ts
order-service/: Cargo.toml  Dockerfile  Rocket.toml  urlencoding.txt
order-service/migrations/: 001_initial_setup.sql
order-service/migrations/2026-01-24-000003_create_order_tables/: down.sql  up.sql
order-service/src/: auth.rs  db.rs  geolocation.rs  health.rs  main.rs  models.rs  nominatim.rs  routes.rs  schema.rs
product-service/: Cargo.toml  Dockerfile  Rocket.toml
product-service/migrations/: 001_initial_setup.sql
product-service/migrations/2026-01-24-000002_create_product_tables/: down.sql  up.sql
product-service/src/: auth.rs  db.rs  health.rs  main.rs  models.rs  schema.rs
(+5 files in other folders)
