[package]
name = "handshake_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
r2d2 = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
rocket_cors = "0.6.0"

[dependencies.rocket_sync_db_pools]
version = " 0.1"
features = ["diesel_postgres_pool"]
