[package]
name = "handshake_email"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tera = "1.20"
rocket_cors = "0.6.0"
base64 = "0.21"
